chore(updatecli) bump manifest for version 0.36.0
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/updatecli/weekly.d/docker-ce.yaml
+++ b/updatecli/weekly.d/docker-ce.yaml
@@ -41,6 +41,7 @@ pullrequests:
   default:
     kind: github
     scmid: default
+    title: Bump docker-ce version to {{ source "lastDockerCePackageVersion" }}
     spec:
       labels:
         - dependencies
