--- a/updatecli/weekly.d/puppet-modules/r10k.yaml
+++ b/updatecli/weekly.d/puppet-modules/r10k.yaml
@@ -51,6 +51,7 @@ pullrequests:
   default:
     kind: github
     scmid: default
+    title: Bump the R10k Puppet Module to {{ source "latestVersion" }}
     spec:
       labels:
         - puppet-module
