--- a/updatecli/weekly.d/puppet-modules/systemd.yaml
+++ b/updatecli/weekly.d/puppet-modules/systemd.yaml
@@ -51,6 +51,7 @@ pullrequests:
   default:
     kind: github
     scmid: default
+    title: Bump the SystemD Puppet Module to {{ source "latestVersion" }}
     spec:
       labels:
         - puppet-module
