add the config-file-provider in every location where it's needed

--- a/hieradata/vagrant/common.yaml
+++ b/hieradata/vagrant/common.yaml
@@ -387,6 +387,7 @@ profile::jenkinscontroller::plugins:
   - buildtriggerbadge
   - cloudbees-folder
   - code-coverage-api
+  - config-file-provider
   - configuration-as-code
   - credentials
   - credentials-binding
