--- a/hieradata/clients/azure.ci.jenkins.io.yaml
+++ b/hieradata/clients/azure.ci.jenkins.io.yaml
@@ -477,6 +477,7 @@ profile::jenkinscontroller::plugins:
   - buildtriggerbadge
   - cloudbees-folder
   - code-coverage-api
+  - config-file-provider
   - configuration-as-code
   - credentials
   - credentials-binding
