Revert "feat(ci.jenkins.io) remove jnlp-alpine pod template + switch the jnlp-node to a new image (#2458)"
This reverts commit a6ff84f3a2c79d62c90b59555061d4bb16ce46df.

--- a/hieradata/clients/azure.ci.jenkins.io.yaml
+++ b/hieradata/clients/azure.ci.jenkins.io.yaml
@@ -166,13 +166,17 @@ profile::jenkinscontroller::jcasc:
             cpus: 4
             memory: 8
             imagePullSecrets: dockerhub-credential
-          - name: jnlp-webbuilder
+          - name: jnlp-node
             cpus: 2
             memory: 4
             labels:
               - node
-              - ruby
-              - webbuilder
+            imagePullSecrets: dockerhub-credential
+          - name: jnlp-alpine
+            cpus: 1
+            memory: 2
+            labels:
+              - alpine
             imagePullSecrets: dockerhub-credential
           - name: jnlp
             labels:
