--- a/updatecli/weekly.d/jenkinscontroller-agents.yaml
+++ b/updatecli/weekly.d/jenkinscontroller-agents.yaml
@@ -45,11 +45,17 @@ sources:
       image: "jenkinsciinfra/inbound-agent-maven"
       tag: "jdk17"
       architecture: amd64
-  getLatestInboundWebBuilderContainerImage:
+  getLatestInboundNodeContainerImage:
     kind: dockerdigest
     spec:
-      image: "jenkinsciinfra/builder"
+      image: "jenkinsciinfra/inbound-agent-node"
       tag: "latest"
+      architecture: amd64
+  getLatestInboundAlpineContainerImage:
+    kind: dockerdigest
+    spec:
+      image: "jenkins/inbound-agent"
+      tag: "alpine"
       architecture: amd64
   getLatestInboundJDK11ContainerImage:
     kind: dockerdigest
@@ -139,15 +145,25 @@ targets:
     transformers:
       - addprefix: "jenkinsciinfra/jenkins-agent-ubuntu-20.04@"
     scmid: default
-  setInboundWebBuilderContainerImage:
-    sourceid: getLatestInboundWebBuilderContainerImage
-    name: "Bump container agent image jenkinsciinfra/builder"
+  setInboundNodeContainerImage:
+    sourceid: getLatestInboundNodeContainerImage
+    name: "Bump container agent image jenkinsciinfra/inbound-agent-node"
     kind: yaml
     spec:
       file: hieradata/common.yaml
-      key: "profile::jenkinscontroller::jcasc.agent_images.container_images.jnlp-webbuilder"
+      key: "profile::jenkinscontroller::jcasc.agent_images.container_images.jnlp-node"
     transformers:
-      - addprefix: "jenkinsciinfra/builder@"
+      - addprefix: "jenkinsciinfra/inbound-agent-node@"
+    scmid: default
+  setInboundAlpineContainerImage:
+    sourceid: getLatestInboundAlpineContainerImage
+    name: "Bump container agent image jenkins/inbound-agent (Alpine)"
+    kind: yaml
+    spec:
+      file: hieradata/common.yaml
+      key: "profile::jenkinscontroller::jcasc.agent_images.container_images.jnlp-alpine"
+    transformers:
+      - addprefix: "jenkins/inbound-agent@"
     scmid: default
   setInboundJDK11ContainerImage:
     sourceid: getLatestInboundJDK11ContainerImage
