--- a/hieradata/vagrant/common.yaml
+++ b/hieradata/vagrant/common.yaml
@@ -99,17 +99,13 @@ profile::jenkinscontroller::jcasc:
             cpus: 4
             memory: 8
             imagePullSecrets: dockerhub-credential
-          - name: jnlp-node
+          - name: jnlp-webbuilder
             cpus: 2
             memory: 4
             labels:
               - node
-            imagePullSecrets: dockerhub-credential
-          - name: jnlp-alpine
-            cpus: 1
-            memory: 2
-            labels:
-              - alpine
+              - webbuilder
+              - ruby
             imagePullSecrets: dockerhub-credential
           - name: jnlp
             labels:
@@ -153,17 +149,13 @@ profile::jenkinscontroller::jcasc:
             cpus: 4
             memory: 8
             imagePullSecrets: dockerhub-credential
-          - name: jnlp-node
+          - name: jnlp-webbuilder
             cpus: 2
             memory: 4
             labels:
               - node
-            imagePullSecrets: dockerhub-credential
-          - name: jnlp-alpine
-            cpus: 1
-            memory: 2
-            labels:
-              - alpine
+              - webbuilder
+              - ruby
             imagePullSecrets: dockerhub-credential
           - name: jnlp
             labels:
