hotfix(ci.jenkins.io) fixup on #2464 to use the default java
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/hieradata/clients/azure.ci.jenkins.io.yaml
+++ b/hieradata/clients/azure.ci.jenkins.io.yaml
@@ -167,6 +167,7 @@ profile::jenkinscontroller::jcasc:
             memory: 8
             imagePullSecrets: dockerhub-credential
           - name: jnlp-webbuilder
+            javaHome: java
             cpus: 2
             memory: 4
             labels:
@@ -256,6 +257,7 @@ profile::jenkinscontroller::jcasc:
             memory: 8
             imagePullSecrets: dockerhub-credential
           - name: jnlp-webbuilder
+            javaHome: java
             cpus: 2
             memory: 4
             labels:
