--- a/hieradata/vagrant/common.yaml
+++ b/hieradata/vagrant/common.yaml
@@ -100,7 +100,7 @@ profile::jenkinscontroller::jcasc:
             memory: 8
             imagePullSecrets: dockerhub-credential
           - name: jnlp-webbuilder
-            javaHome: java
+            agentJavaBin: java
             cpus: 2
             memory: 4
             labels:
@@ -151,7 +151,7 @@ profile::jenkinscontroller::jcasc:
             memory: 8
             imagePullSecrets: dockerhub-credential
           - name: jnlp-webbuilder
-            javaHome: java
+            agentJavaBin: java
             cpus: 2
             memory: 4
             labels:
