chore(agent/ci): add linux-amd64-big label
to be compliant with the infra label

--- a/hieradata/clients/azure.ci.jenkins.io.yaml
+++ b/hieradata/clients/azure.ci.jenkins.io.yaml
@@ -326,6 +326,7 @@ profile::jenkinscontroller::jcasc:
               - highmem
               - highram
               - docker-highmem
+              - linux-amd64-big
             useAsMuchAsPosible: false
             spot: false
             userData: *BootstrapDatadogScript
