fix(datadog) fine-tune disk metric collect to avoid tons of errors related to docker overlay of netns (#2504)
* fix(datadog) fine-tune disk metric collect to avoid tons of errors related to docker overlay of netns

Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

* Apply suggestions from code review

Signed-off-by: Damien Duportal <damien.duportal@gmail.com>
Co-authored-by: Hervé Le Meur <91831478+lemeurherve@users.noreply.github.com>

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -142,6 +142,19 @@ datadog_agent::api_key: ENC[PKCS7,MIIBmQYJKoZIhvcNAQcDoIIBijCCAYYCAQAxggEhMIIBHQ
 datadog_agent::process_enabled: true
 datadog_agent::logs_enabled: true
 datadog_agent::container_collect_all: true
+datadog_agent::integrations:
+  disk:
+    init_config: {}
+    instances:
+      - use_mount: false
+        # Disable filesystem checks Ref. https://github.com/DataDog/dd-agent/issues/2932 and https://github.com/jenkins-infra/helpdesk/issues/1746
+        file_system_exclude:
+          - tmpfs
+          - none
+          - overlay
+          - shm
+          - nsfs # netns
+        include_all_devices: false
 profile::buildagent::ssh_keys:
   "/home/jenkins/.ssh/id_rsa":
     privkey: |
