--- a/hieradata/vagrant/roles/openvpn.yaml
+++ b/hieradata/vagrant/roles/openvpn.yaml
@@ -1,14 +1,20 @@
 ---
 profile::openvpn::networks:
   eth0:
+    name: Subnet 'dmz' of network 'prod-jenkins-public-prod'
     route-metric: 100
     macaddress: 00:0d:3a:0e:4b:1c
+    network_cidr: 172.17.0.0/24
   eth1:
+    name: Subnet 'data-tier' of network 'prod-jenkins-public-prod'
     route-metric: 200
     macaddress: 00:0d:3a:0e:4f:89
-  eth2:
-    route-metric: 300
-    macaddress: 00:0d:3a:0e:4e:7e
+    network_cidr: 192.168.0.10/24
+    peered_network_cidrs:
+      - 10.1.0.0/16
+profile::openvpn::vpn_networks_cidr:
+  - 10.8.0.0/24
+  - 10.8.1.0/24
 
 profile::openvpn::auth_ldap_password: 's3cr3t'
 profile::openvpn::auth_ldap_url: 'ldaps://ldap'
