--- a/vagrant-docker/hiera.yaml
+++ b/vagrant-docker/hiera.yaml
@@ -2,13 +2,15 @@
 version: 5
 defaults:
   # Relative path to the current file
-  datadir: ../../hieradata
+  datadir: ../hieradata
   data_hash: yaml_data
 hierarchy:
   - name: "YAML Hierarchy Levels"
     paths:
-      # Rspec custom
-      - "rspec/%{rspec_hieradata_fixture}.yaml"
+      # Vagrant-specific hierarchy
+      - "vagrant/clients/%{veggie}.yaml"
+      - "vagrant/roles/%{hiera_role}.yaml"
+      - "vagrant/common.yaml"
       # Same hierarchy as production (dist/profile/files/hiera.yaml is the reference)
       - "clients/%{clientcert}.yaml"
       - "roles/%{hiera_role}.yaml"
