chore(vagrant) add a 2nd NIC, which requires ubuntu 20.04 and iptables package to avoid iptables errors - https://github.com/robbertkl/docker-ipv6nat/issues/47
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/vagrant-docker/Dockerfile
+++ b/vagrant-docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:18.04
+FROM ubuntu:20.04
 
 ENV DEBIAN_FRONTEND=noninteractive
 ENV LANG="en_US.UTF-8"
@@ -13,6 +13,7 @@ RUN apt-get update \
   build-essential \
   curl \
   iproute2 \
+  iptables \
   locales \
   lvm2 \
   openssh-server \
