fix(ACI): correct quotes around JENKINS_JAVA_OPTS

--- a/hieradata/clients/azure.ci.jenkins.io.yaml
+++ b/hieradata/clients/azure.ci.jenkins.io.yaml
@@ -432,6 +432,8 @@ profile::jenkinscontroller::jcasc:
             cpus: 4
             memory: 8
             agentJavaBin: 'C:/openjdk-11/bin/java' # From image jenkins/inbound-agent:jdk11-nanoserver
+            agentJavaOpts: >-
+              \"-XX:+PrintCommandLineFlags\"
             labels:
               - maven-windows
           - name: maven-11-windows
@@ -440,6 +442,8 @@ profile::jenkinscontroller::jcasc:
             cpus: 4
             memory: 8
             agentJavaBin: 'C:/openjdk-11/bin/java' # From image jenkins/inbound-agent:jdk11-nanoserver
+            agentJavaOpts: >-
+              \"-XX:+PrintCommandLineFlags\"
             labels:
               - maven-11-windows
           - name: maven-17-windows
@@ -448,6 +452,8 @@ profile::jenkinscontroller::jcasc:
             cpus: 4
             memory: 8
             agentJavaBin: 'C:/openjdk-11/bin/java' # From image jenkins/inbound-agent:jdk11-nanoserver
+            agentJavaOpts: >-
+              \"-XX:+PrintCommandLineFlags\"
             labels:
               - maven-17-windows
           - name: maven-19-windows
@@ -456,6 +462,8 @@ profile::jenkinscontroller::jcasc:
             cpus: 4
             memory: 8
             agentJavaBin: 'C:/openjdk-11/bin/java' # From image jenkins/inbound-agent:jdk11-nanoserver
+            agentJavaOpts: >-
+              \"-XX:+PrintCommandLineFlags\"
             labels:
               - maven-19-windows
   artifact_caching_proxy:
