chore(updatecli) update manifests for 0.40.0
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/updatecli/weekly.d/docker-ce.yaml
+++ b/updatecli/weekly.d/docker-ce.yaml
@@ -37,9 +37,9 @@ targets:
       key: "docker::version"
     scmid: default
 
-pullrequests:
+actions:
   default:
-    kind: github
+    kind: github/pullrequest
     scmid: default
     title: Bump docker-ce version to {{ source "lastDockerCePackageVersion" }}
     spec:
