--- a/updatecli/weekly.d/openvpn.yaml
+++ b/updatecli/weekly.d/openvpn.yaml
@@ -48,9 +48,9 @@ targets:
       key: "profile::openvpn::image_tag"
     scmid: default
 
-pullrequests:
+actions:
   default:
-    kind: github
+    kind: github/pullrequest
     scmid: default
     title: Bump OpenVPN Docker image version to {{ source "latestVersion" }}
     spec:
