--- a/updatecli/weekly.d/updatecli.yaml
+++ b/updatecli/weekly.d/updatecli.yaml
@@ -43,9 +43,9 @@ targets:
       key: "jobs.updatecli.steps[1].env.UPDATECLI_VERSION"
     scmid: default
 
-pullrequests:
+actions:
   default:
-    kind: github
+    kind: github/pullrequest
     scmid: default
     title: Update updatecli version to {{ source "latestUpdatecliVersion" }}
     spec:
