--- a/updatecli/weekly.d/puppet-modules/concat.yaml
+++ b/updatecli/weekly.d/puppet-modules/concat.yaml
@@ -47,9 +47,9 @@ targets:
         mod 'puppetlabs-concat', '{{ source "latestVersion" }}'
     scmid: default
 
-pullrequests:
+actions:
   default:
-    kind: github
+    kind: github/pullrequest
     scmid: default
     title: Bump the Concat Puppet Module to {{ source "latestVersion" }}
     spec:
