--- a/updatecli/weekly.d/puppet-modules/firewall.yaml
+++ b/updatecli/weekly.d/puppet-modules/firewall.yaml
@@ -47,9 +47,9 @@ targets:
         mod 'puppetlabs-firewall', '{{ source "latestVersion" }}'
     scmid: default
 
-pullrequests:
+actions:
   default:
-    kind: github
+    kind: github/pullrequest
     scmid: default
     title: Bump `puppetlabs-firewall` module to {{ source "latestVersion" }}
     spec:
