--- a/updatecli/weekly.d/puppet-modules/lvm.yaml
+++ b/updatecli/weekly.d/puppet-modules/lvm.yaml
@@ -47,9 +47,9 @@ targets:
         mod 'puppetlabs-lvm', '{{ source "latestVersion" }}'
     scmid: default
 
-pullrequests:
+actions:
   default:
-    kind: github
+    kind: github/pullrequest
     scmid: default
     title: Bump the LVM Puppet Module to {{ source "latestVersion" }}
     spec:
