--- a/updatecli/weekly.d/puppet-modules/r10k.yaml
+++ b/updatecli/weekly.d/puppet-modules/r10k.yaml
@@ -47,9 +47,9 @@ targets:
         mod 'puppet-r10k', '{{ source "latestVersion" }}'
     scmid: default
 
-pullrequests:
+actions:
   default:
-    kind: github
+    kind: github/pullrequest
     scmid: default
     title: Bump the R10k Puppet Module to {{ source "latestVersion" }}
     spec:
