--- a/updatecli/weekly.d/puppet-modules/systemd.yaml
+++ b/updatecli/weekly.d/puppet-modules/systemd.yaml
@@ -47,9 +47,9 @@ targets:
         mod 'puppet-systemd', '{{ source "latestVersion" }}'
     scmid: default
 
-pullrequests:
+actions:
   default:
-    kind: github
+    kind: github/pullrequest
     scmid: default
     title: Bump the SystemD Puppet Module to {{ source "latestVersion" }}
     spec:
