--- a/hieradata/vagrant/roles/openvpn.yaml
+++ b/hieradata/vagrant/roles/openvpn.yaml
@@ -108,4 +108,4 @@ profile::openvpn::openvpn_dh_pem: |
   KylZSP3kLe6g3qpUb82MTsYNIDUz5XQ7UwIBAg==
   -----END DH PARAMETERS-----
 
-profile::openvpn::openvpn_network: default
+profile::openvpn::openvpn_network_name: default
