--- a/hieradata/rspec/profile_openvpn_two_interfaces.yaml
+++ b/hieradata/rspec/profile_openvpn_two_interfaces.yaml
@@ -13,4 +13,6 @@ profile::openvpn::networks:
 profile::openvpn::vpn_networks_cidr:
   - 127.0.10.0/24
   - 172.19.0.0/24
-profile::openvpn::openvpn_network_name: private
+profile::openvpn::vpn_network_name: private
+# TODO: replace by a conversion from vpn_networks_cidr
+profile::openvpn::vpn_network_netmask: 255.255.255.240
