--- a/hieradata/vagrant/roles/openvpn.yaml
+++ b/hieradata/vagrant/roles/openvpn.yaml
@@ -12,9 +12,7 @@ profile::openvpn::networks:
     network_cidr: 192.168.0.10/24
     peered_network_cidrs:
       - 10.1.0.0/16
-profile::openvpn::vpn_networks_cidr:
-  - 10.8.0.0/24
-  - 10.8.1.0/24
+profile::openvpn::vpn_network_cidr: 10.8.0.0/24
 
 profile::openvpn::auth_ldap_password: 's3cr3t'
 profile::openvpn::auth_ldap_url: 'ldaps://ldap'
@@ -109,5 +107,5 @@ profile::openvpn::openvpn_dh_pem: |
   -----END DH PARAMETERS-----
 
 profile::openvpn::vpn_network_name: default
-# TODO: replace by a conversion from vpn_networks_cidr
+# TODO: replace by a conversion from vpn_network_cidr
 profile::openvpn::vpn_network_netmask: 255.255.254.0
