--- a/hieradata/rspec/profile_openvpn_two_interfaces.yaml
+++ b/hieradata/rspec/profile_openvpn_two_interfaces.yaml
@@ -10,9 +10,7 @@ profile::openvpn::networks:
     network_cidr: 192.168.100.0/24
     peered_network_cidrs:
       - 10.0.0.0/16
-profile::openvpn::vpn_networks_cidr:
-  - 127.0.10.0/24
-  - 172.19.0.0/24
+profile::openvpn::vpn_network_cidr: 127.0.10.0/24
 profile::openvpn::vpn_network_name: private
-# TODO: replace by a conversion from vpn_networks_cidr
+# TODO: replace by a conversion from vpn_network_cidr
 profile::openvpn::vpn_network_netmask: 255.255.255.240
