--- a/hieradata/rspec/profile_openvpn.yaml
+++ b/hieradata/rspec/profile_openvpn.yaml
@@ -15,7 +15,8 @@ profile::openvpn::networks:
     network_cidr: 192.168.200.0/24
     peered_network_cidrs:
       - 11.0.0.0/16
-profile::openvpn::vpn_network_cidr: 127.0.10.0/24
-profile::openvpn::vpn_network_name: default
-# TODO: replace by a conversion from vpn_network_cidr
-profile::openvpn::vpn_server_netmask: 255.255.254.0
+profile::openvpn::vpn_network
+  name: default
+  cidr: 127.0.10.0/24
+  # TODO: replace by a conversion from vpn_network_cidr
+  netmask: 255.255.254.0
