--- a/hieradata/rspec/profile_openvpn_two_interfaces.yaml
+++ b/hieradata/rspec/profile_openvpn_two_interfaces.yaml
@@ -10,7 +10,7 @@ profile::openvpn::networks:
     network_cidr: 192.168.100.0/24
     peered_network_cidrs:
       - 10.0.0.0/16
-profile::openvpn::vpn_network
+profile::openvpn::vpn_network:
   name: private
   cidr: 127.0.10.0/24
   # TODO: replace by a conversion from vpn_network_cidr
