--- a/hieradata/rspec/profile_openvpn.yaml
+++ b/hieradata/rspec/profile_openvpn.yaml
@@ -15,7 +15,7 @@ profile::openvpn::networks:
     network_cidr: 192.168.200.0/24
     peered_network_cidrs:
       - 11.0.0.0/16
-profile::openvpn::vpn_network
+profile::openvpn::vpn_network:
   name: default
   cidr: 127.0.10.0/24
   # TODO: replace by a conversion from vpn_network_cidr
