--- a/hieradata/vagrant/roles/openvpn.yaml
+++ b/hieradata/vagrant/roles/openvpn.yaml
@@ -12,7 +12,11 @@ profile::openvpn::networks:
     network_cidr: 192.168.0.10/24
     peered_network_cidrs:
       - 10.1.0.0/16
-profile::openvpn::vpn_network_cidr: 10.8.0.0/24
+profile::openvpn::vpn_network:
+  name: default
+  cidr: 10.8.0.0/24
+  # TODO: replace by a conversion from vpn_network_cidr
+  netmask: 255.255.254.0
 
 profile::openvpn::auth_ldap_password: 's3cr3t'
 profile::openvpn::auth_ldap_url: 'ldaps://ldap'
@@ -105,7 +109,3 @@ profile::openvpn::openvpn_dh_pem: |
   M/5EwDFZREQ3tx2xol8uTbnfuIm/OQKW1OqmFKvNCwF8I7SdK9pIHHAyPBNe37vw
   KylZSP3kLe6g3qpUb82MTsYNIDUz5XQ7UwIBAg==
   -----END DH PARAMETERS-----
-
-profile::openvpn::vpn_network_name: default
-# TODO: replace by a conversion from vpn_network_cidr
-profile::openvpn::vpn_network_netmask: 255.255.254.0
