--- a/hieradata/rspec/profile_openvpn.yaml
+++ b/hieradata/rspec/profile_openvpn.yaml
@@ -18,5 +18,5 @@ profile::openvpn::networks:
 profile::openvpn::vpn_network:
   name: default
   cidr: 127.0.10.0/24
-  # TODO: replace by a conversion from vpn_network_cidr
+  # TODO: replace by a conversion from cidr
   netmask: 255.255.254.0
