chore(agents ci): adding labels for ubuntu/windows (#2550)
* chore(agents ci): adding labels for ubuntu/windows

* chore readding all the ubuntus

--- a/hieradata/clients/azure.ci.jenkins.io.yaml
+++ b/hieradata/clients/azure.ci.jenkins.io.yaml
@@ -316,6 +316,7 @@ profile::jenkinscontroller::jcasc:
               - docker
               - linux
               - linux-amd64
+              - ubuntu
             useAsMuchAsPossible: true
             spot: true
             userData: &BootstrapDatadogScript
@@ -342,6 +343,8 @@ profile::jenkinscontroller::jcasc:
             labels:
               - docker-windows
               - docker-windows-2019
+              - windows
+              - windows-2019
             useAsMuchAsPossible: true
             spot: true
             userData:
@@ -356,6 +359,7 @@ profile::jenkinscontroller::jcasc:
             os_version: "20.04"
             architecture: "amd64"
             labels:
+              - ubuntu
               - highmem
               - highram
               - docker-highmem
@@ -370,6 +374,7 @@ profile::jenkinscontroller::jcasc:
             os_version: "20.04"
             architecture: "arm64"
             labels:
+              - ubuntu
               - arm64docker
               - arm64linux
             useAsMuchAsPossible: false
@@ -389,6 +394,7 @@ profile::jenkinscontroller::jcasc:
           instanceType: Standard_D4s_v3 # 4 vCPUS / 16 Gb
           architecture: amd64
           labels:
+            - ubuntu
             - java
             - linux
             - docker
@@ -412,6 +418,7 @@ profile::jenkinscontroller::jcasc:
           instanceType: Standard_D16s_v3 # 16 vCPUS / 64 Gb
           architecture: amd64
           labels:
+            - ubuntu
             - highmem
             - highram
             - docker-highmem
@@ -438,6 +445,7 @@ profile::jenkinscontroller::jcasc:
             - docker-windows
             - docker-windows-2019
             - windows
+            - windows-2019
           maxInstances: 20
           useAsMuchAsPossible: true
           credentialsId: "jenkinsvmagents-userpass"
