fix(openvpn): add new environment variables and keep only one VPN CIDR (#2546)
* fix: rename openvpn network name variables

* add additional openvpn env vars

* use last docker-openvpn image version

* only one vpn_network_cidr definable in profile

* chore: rename OPENVPN_SERVER_MASK to OPENVPN_SERVER_NETMASK

* remove unused var and fix comment

* use an hash

Co-authored-by: Damien Duportal <damien.duportal@gmail.com>

* fixup

* fix

* Update dist/profile/manifests/openvpn.pp

Co-authored-by: Hervé Le Meur <91831478+lemeurherve@users.noreply.github.com>

* space

Co-authored-by: Damien Duportal <damien.duportal@gmail.com>

--- a/hieradata/rspec/profile_openvpn_two_interfaces.yaml
+++ b/hieradata/rspec/profile_openvpn_two_interfaces.yaml
@@ -10,7 +10,8 @@ profile::openvpn::networks:
     network_cidr: 192.168.100.0/24
     peered_network_cidrs:
       - 10.0.0.0/16
-profile::openvpn::vpn_networks_cidr:
-  - 127.0.10.0/24
-  - 172.19.0.0/24
-profile::openvpn::openvpn_network: private
+profile::openvpn::vpn_network:
+  name: private
+  cidr: 127.0.10.0/24
+  # TODO: replace by a conversion from cidr
+  netmask: 255.255.255.240
