chore(upodatecli) support ubuntu jammy for docker-ce
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/updatecli/weekly.d/docker-ce.yaml
+++ b/updatecli/weekly.d/docker-ce.yaml
@@ -14,26 +14,46 @@ scms:
       branch: "{{ .github.branch }}"
 
 sources:
-  lastDockerCePackageVersion:
+  lastVersionBionic:
     name: Get latest docker-ce version
     kind: shell
     spec:
-      command: bash ./updatecli/scripts/docker-ce-updates.sh
+      command: bash ./updatecli/scripts/docker-ce-updates.sh bionic
+  lastVersionJammy:
+    name: Get latest docker-ce version
+    kind: shell
+    spec:
+      command: bash ./updatecli/scripts/docker-ce-updates.sh jammy
 
 conditions:
-  checkIfHieradataHasDockerVersionKey:
+  checkIfHieradataCommonHasDockerVersionKey:
     kind: file
     disablesourceinput: true
     spec:
       file: hieradata/common.yaml
       matchpattern: "docker::version:.*"
+  checkIfHieradataPrivateVPNHasDockerVersionKey:
+    kind: file
+    disablesourceinput: true
+    spec:
+      file: hieradata/clients/private.vpn.jenkins.io.yaml
+      matchpattern: "docker::version:.*"
 
 targets:
-  default:
+  UpdateHieradataCommonHasDockerVersionKey:
     name: Update docker-ce version in common.yaml
     kind: yaml
+    sourceid: lastVersionBionic
     spec:
       file: hieradata/common.yaml
+      key: "docker::version"
+    scmid: default
+  UpdateHieradataPrivateVPNHasDockerVersionKey:
+    name: Update docker-ce version in hieradata/clients/private.vpn.jenkins.io.yaml
+    kind: yaml
+    sourceid: lastVersionJammy
+    spec:
+      file: hieradata/clients/private.vpn.jenkins.io.yaml
       key: "docker::version"
     scmid: default
 
@@ -41,7 +61,8 @@ actions:
   default:
     kind: github/pullrequest
     scmid: default
-    title: Bump docker-ce version to {{ source "lastDockerCePackageVersion" }}
+    title: Bump docker-ce version to {{ source "lastVersionBionic" }} (Bionic) and {{ source "lastVersionJammy" }} (Jammy)
     spec:
       labels:
         - dependencies
+        - docker-ce
